--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "axios": "^1.6.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "firebase-admin": "^11.11.0",
+    "firebase": "^10.7.1",
+    "firebase-admin": "^12.0.0",
     "multer": "^1.4.5-lts.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
+    "stream-browserify": "^3.0.0",
     "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5"
   },
