modified uploadMFU method in react app

--- a/firebase.json
+++ b/firebase.json
@@ -20,10 +20,6 @@
     ],
     "rewrites": [
       {
-        "source": "/",
-        "destination": "/index.html"
-      },
-      {
         "source": "/fetchDatabaseKeys",
         "function": "fetchDatabaseKeys"
       },
@@ -47,6 +43,18 @@
       {
         "source": "/downloadExcel",
         "function": "downloadExcel"
+      },
+      {
+        "source": "/home",
+        "destination": "/index.html"
+      },
+      {
+        "source": "/login",
+        "destination": "/index.html"
+      },
+      {
+        "source": "/create",
+        "destination": "/index.html"
       }
     ]
   }
