--- a/functions/package.json
+++ b/functions/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.6.2",
     "connect-busboy": "^1.0.0",
     "cors": "^2.8.5",
+    "exceljs": "^4.4.0",
     "express": "^4.18.2",
     "firebase-admin": "^11.8.0",
     "firebase-functions": "^4.3.1",
